# closurizer

./: .gitignore  README.md  pyproject.toml
closurizer/: cli.py  closurizer.py
tests/: __init__.py  test_category_columns.py  test_cli.py  test_database_input.py  test_module_usage.py  test_multivalued_arrays.py  test_multivalued_fields.py
tests/input/: rg.tsv  test_edges.tsv  test_nodes.tsv
