[tool.poetry]
name = "closurizer"
version = "0.1.2"
description = "Add closure expansion fields to kgx files following the Golr pattern"
authors = ["Kevin Schaper <kevin@tislab.org>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8"
petl = "^1.7.10"
SQLAlchemy = "^1.4.37"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
closurizer = "closurizer.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
