[tool.poetry]
name = "closurizer"
version = "0.4.1"
description = "Add closure expansion fields to kgx files following the Golr pattern"
authors = ["Kevin Schaper <kevin@tislab.org>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8"
SQLAlchemy = "^1.4.37"
duckdb = "^0.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
closurizer = "closurizer.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
