[tool.poetry]
name = "closurizer"
version = "0.7.2"
description = "Add closure expansion fields to kgx files following the Golr pattern"
authors = ["Kevin Schaper <kevin@tislab.org>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8"
SQLAlchemy = "^1.4.37"
duckdb = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
closurizer = "closurizer.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
